@@ -38,15 +38,16 @@ for pkg in $ALL_PKGS; do
     else
       GUILE_LOAD_PATH=$this_dir/$pkg:$GUILE_LOAD_PATH
     fi
-    LD_LIBRARY_PATH=$this_dir/$pkg/gnome/gw:$LD_LIBRARY_PATH
+    if [ -f $src_dir/$pkg/shlib-dirs.ac ]; then
+      for dir in `cat $src_dir/$pkg/shlib-dirs.ac`; do
+	LD_LIBRARY_PATH=$this_dir/$pkg/$dir:$LD_LIBRARY_PATH
+      done
+    else
+      LD_LIBRARY_PATH=$this_dir/$pkg/gnome/gw:$LD_LIBRARY_PATH
+    fi
     PKG_CONFIG_PATH=$this_dir/$pkg:$PKG_CONFIG_PATH
   fi
 done
-
-if [ -d $src_dir/glib ]; then
-  LD_LIBRARY_PATH=$this_dir/glib/gnome/gobject:$LD_LIBRARY_PATH
-fi
-
 
 export GUILE_LOAD_PATH LD_LIBRARY_PATH PKG_CONFIG_PATH
 
